# napredne-web-tehnologije

./: docker-compose.yml  structura.txt
api/: .dockerignore  Cargo.toml  Dockerfile
api/migrations/: 20240101000000_initial.sql  20240102000000_add_user_role.sql  20240103000000_ratings_comments.sql  20240104000000_user_fridge.sql
api/src/: config.rs  errors.rs  main.rs
api/src/handlers/: auth.rs  fridge.rs  ingredients.rs  middleware.rs  mod.rs  ratings.rs  recipes.rs
api/src/models/: fridge.rs  ingredient.rs  mod.rs  rating.rs  recipe.rs  user.rs
frontend/: Dockerfile  package-lock.json
frontend/src/: App.js  global.css
frontend/src/api/: axios.js
frontend/src/components/: Navbar.js  Navbar.module.css  RecipeCard.js  RecipeCard.module.css  StarRating.js  StarRating.module.css  Toast.js  Toast.module.css
frontend/src/context/: AuthContext.js  ThemeContext.js
frontend/src/pages/: CreateRecipe.js  CreateRecipe.module.css  Fridge.js  Fridge.module.css  Home.js  Home.module.css  Login.js  Login.module.css  RecipeDetail.js  RecipeDetail.module.css  Register.js  Register.module.css  Search.js  Search.module.css
nginx/: nginx.conf
nginx/html/: index.html
